# resumeScan

./: README.md  pyproject.toml  requirements.txt  resumes.csv  test_upload.py
backend/: app.py  llm_client.py  parser.py  requirements.txt
frontend/: api_client.py  app.py  requirements.txt
static/: styles.css
templates/: base.html  candidate.html  candidates.html  index.html  match_form.html  match_results.html  upload.html
