[project]
name = "resumescan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=4.0.0",
    "pandas>=2.0.0",
    "pdfminer-six>=20250506",
    "plotly>=5.15.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "streamlit>=1.28.0",
]
